api/v1/datadog/docs/ApplicationKeyResponse.md
# ApplicationKeyResponse

## Properties

| Name               | Type                                               | Description | Notes      |
| ------------------ | -------------------------------------------------- | ----------- | ---------- |
| **ApplicationKey** | Pointer to [**ApplicationKey**](ApplicationKey.md) |             | [optional] |

## Methods

### NewApplicationKeyResponse

`func NewApplicationKeyResponse() *ApplicationKeyResponse`

NewApplicationKeyResponse instantiates a new ApplicationKeyResponse object.
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed.

### NewApplicationKeyResponseWithDefaults

`func NewApplicationKeyResponseWithDefaults() *ApplicationKeyResponse`

NewApplicationKeyResponseWithDefaults instantiates a new ApplicationKeyResponse object.
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set.

### GetApplicationKey

`func (o *ApplicationKeyResponse) GetApplicationKey() ApplicationKey`

GetApplicationKey returns the ApplicationKey field if non-nil, zero value otherwise.

### GetApplicationKeyOk

`func (o *ApplicationKeyResponse) GetApplicationKeyOk() (*ApplicationKey, bool)`

GetApplicationKeyOk returns a tuple with the ApplicationKey field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetApplicationKey

`func (o *ApplicationKeyResponse) SetApplicationKey(v ApplicationKey)`

SetApplicationKey sets ApplicationKey field to given value.

### HasApplicationKey

`func (o *ApplicationKeyResponse) HasApplicationKey() bool`

HasApplicationKey returns a boolean if a field has been set.

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)
